<resources>
    <string name="app_name">HomeAI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Wyloguj</string>

    <string name="menu_devices">Urządzenia</string>
    <string name="menu_sensors">Czujniki</string>
    <string name="menu_load">Ładowanie</string>

    <string name="no_results">Brak wyników</string>
    <string name="username">Użytkownik</string>
    <string name="password">Hasło</string>
    <string name="login">zaloguj</string>
    <string name="login_title">HomeAI \n Aplikacja Zarządzająca</string>
    <string name="save">Zapisz</string>
    <string name="menu_automatons">Automaty</string>
    <string name="menu_device">Urządzenie</string>
    <string name="menu_sensor">Czujnik</string>
    <string name="menu_automaton">Automat</string>
    <string name="delete">Usuń</string>
    <string name="generate">Wygeneruj</string>
    <string name="menu_gen_graphs">Wykresy</string>
    <string name="pick_date">Wybierz datę</string>
    <string name="dash">-</string>
</resources>