<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_load">

    <fragment
        android:id="@+id/nav_automaton"
        android:name="com.bbudzowski.homeautoandroid.ui.automaton.unit.AutomatonUnitFragment"
        android:label="@string/menu_automaton" />
    <fragment
        android:id="@+id/nav_sensor"
        android:name="com.bbudzowski.homeautoandroid.ui.sensor.unit.SensorUnitFragment"
        android:label="@string/menu_sensor" />
    <fragment
        android:id="@+id/nav_device"
        android:name="com.bbudzowski.homeautoandroid.ui.device.unit.DeviceUnitFragment"
        android:label="@string/menu_device" />
    <fragment
        android:id="@+id/nav_automatons"
        android:name="com.bbudzowski.homeautoandroid.ui.automaton.list.AutomatonListFragment"
        android:label="@string/menu_automatons" />
    <fragment
        android:id="@+id/nav_load"
        android:name="com.bbudzowski.homeautoandroid.ui.fragments.LoadFragment"
        android:label="@string/menu_load" />
    <fragment
        android:id="@+id/nav_devices"
        android:name="com.bbudzowski.homeautoandroid.ui.device.list.DeviceListFragment"
        android:label="@string/menu_devices"
        tools:layout="@layout/fragment_list" />
    <fragment
        android:id="@+id/nav_sensors"
        android:name="com.bbudzowski.homeautoandroid.ui.sensor.list.SensorListFragment"
        android:label="@string/menu_sensors" />

</navigation>