<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_devices"
            android:icon="@drawable/ic_circle"
            android:title="@string/menu_devices" />
        <item
            android:id="@+id/nav_sensors"
            android:icon="@drawable/ic_circle"
            android:title="@string/menu_sensors" />

        <item
            android:id="@+id/nav_automatons"
            android:icon="@drawable/ic_circle"
            android:title="@string/menu_automatons" />

        <item
            android:id="@+id/nav_gen_graphs"
            android:icon="@drawable/ic_circle"
            android:title="@string/menu_gen_graphs" />
    </group>
</menu>