<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.LoginActivity">

    <Space
        android:id="@+id/login_space1"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.1"/>

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="@color/purple_700"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintTop_toBottomOf="@id/login_space1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Space
        android:id="@+id/login_space2"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.15"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputUsername"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:hint="@string/username"
        android:textColorHint="#A7A7A7"
        android:textSize="16sp"
        android:textColor="#5B5B5B"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@drawable/layout_border"
        android:inputType="text"
        android:imeOptions="actionNext"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintTop_toBottomOf="@id/login_space2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <Space
        android:id="@+id/login_space3"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/inputUsername"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.02"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/inputPassword"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:hint="@string/password"
        android:textColorHint="#A7A7A7"
        android:inputType="textPassword"
        android:textColor="#5B5B5B"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:background="@drawable/layout_border"
        app:endIconMode="password_toggle"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintWidth_percent="0.65"
        app:layout_constraintTop_toBottomOf="@id/login_space3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="TouchTargetSizeCheck"
        android:imeOptions="actionDone"/>

    <Space
        android:id="@+id/login_space4"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintTop_toBottomOf="@id/inputPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHeight_percent="0.1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:backgroundTint="@color/purple_500"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_space4"
        app:layout_constraintWidth_percent="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>